Debug/syntax_expr_test/18.out
syntax_expr_test\18.in(1) Fatal: Syntax error, ")" expected but "end of file" found
