Debug/syntax_expr_test/18.comp
syntax_expr_test\18.in(1) Error: Identifier not found "a"
